# cutest

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.cmake.in
cmake/: CuTestAddTests.cmake  CuTestDiscoverTests.cmake
docs/: introduction.md
include/buracchi/cutest/: cutest.h
src/: cutest.c  cutest_main.c  fpa.c
test/: CMakeLists.txt  asserts.c  example.c  test.c
